# api25

./: README.md
c-cpp/: 2. Modularity in Development.md  4.2 C - Data.md  4.3. C - Statements and Logic..md  4.4 C - Preprocessors.md  5. CMake.md  6. C++.md
c-cpp/c/: basic_concepts.md  comprehensive_example.md  concurrency.md  expressions.md  functions.md  initialization_and_declarations.md  keywords_and_preprocessor.md  miscellaneous.md  statements.md
c-cpp/cpp/: README.md
c-cpp/cpp/01_foundational_concepts/: basic_concepts.md
c-cpp/cpp/02_types_and_objects/: definitions_and_odr.md  name_lookup.md  object.md  types.md
c-cpp/cpp/03_keywords_and_preprocessor/: keywords.md  preprocessor.md
c-cpp/cpp/03a_modules/: modules.md
c-cpp/cpp/04_expressions/: conversions.md  expressions.md  literals.md  operators.md
c-cpp/cpp/05_declarations/: attributes.md  compile_time_assertions.md  compound_types.md  declarations.md  namespaces.md  specifiers_and_qualifiers.md  storage_and_linkage.md  structured_bindings_and_enumerations.md  type_aliases.md  type_specifiers.md
c-cpp/cpp/06_initialization/: initialization.md  (+2 more)
c-cpp/cpp_deep_dive/: 01_expressions.md  02_statements.md  03_declarations.md  04_functions.md  05_classes.md  06_inheritance.md  07_templates.md  08_operator_overloading.md  09_exceptions.md  10_preprocessor.md  11_move_semantics.md  12_smart_pointers.md
c-cpp/old-docs/: 1. Number systems (Bastal-system).md  3. Programs.md  4.1 C - Building Systems.md  c_cpp_summary.md
c-cpp/sample-project/: CMakeLists.txt
c-cpp/sample-project/src/: main.c  main.cpp
(+42 files in other folders)
